--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fetch": "^1.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
